# DataMind

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  errors.py  schemas.py
backend/app/api/v1/: __init__.py  auth.py  connections.py  conversations.py  llm_configs.py  users.py
backend/app/charts/: __init__.py
backend/app/core/: clock.py  config.py  context.py  errors.py  logging.py
backend/app/domain/ports/: __init__.py  database.py  events.py  identity.py  llm.py  run_executor.py  secrets.py
backend/app/domain/value_objects/: __init__.py
backend/app/infra/connectors/: factory.py  mssql.py  mysql.py  oracle.py  postgres.py
backend/app/infra/crypto/: aesgcm_box.py
backend/app/infra/db/: models.py  session.py
backend/app/infra/db/migrations/: env.py
backend/app/infra/db/migrations/versions/: 0001_initial.py
backend/app/infra/events/: bus.py
backend/app/infra/identity/: local.py
backend/app/infra/llm/: litellm_gateway.py
backend/app/pipeline/: __init__.py  contracts.py  disclosure.py  pipeline.py  state.py
backend/app/pipeline/nodes/: __init__.py
backend/app/pipeline/prompts/: __init__.py
backend/app/services/: bootstrap.py  disclosure_service.py  policy.py  run_service.py
backend/app/sqlguard/: __init__.py  policy.py  rewriter.py  validator.py
backend/app/workers/: inprocess.py  reconciler.py
backend/fixtures/: rebuild_fixtures.sh  sales_seed.sql  sales_seed_mssql.sql  sales_seed_mysql.sql
backend/fixtures/mysql/: 01-sakila-schema.sql  02-readonly-user.sql
backend/tests/: conftest.py
backend/tests/unit/: test_charts.py  test_disclosure.py  test_event_bus.py  test_openapi_has_no_secrets.py  test_secret_box.py  test_sqlguard_hostile.py
docs/: CODEBASE.md  architecture.md  ui-design-concept.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: VegaChart.tsx  chat.tsx  settings.tsx  ui.tsx
frontend/src/pages/: ChatPage.tsx  DataSourcesPage.tsx  LlmProvidersPage.tsx  LoginPage.tsx  UsersPage.tsx
frontend/src/theme/: tokens.ts
