[project]
name = "raymand"
version = "0.1.0"
description = "Raymand — conversational BI platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "sqlglot>=25.0",
    "litellm>=1.52",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "cryptography>=43.0",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "email-validator>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.1",
]

[tool.ruff]
line-length = 96
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "ASYNC", "S"]
ignore = ["S101", "B008", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── The dependency rule, enforced rather than documented ─────────────────
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Layered architecture: api -> services -> domain <- infra"
type = "layers"
layers = ["app.api", "app.services", "app.pipeline", "app.domain"]
ignore_imports = ["app.services.* -> app.infra.*"]

[[tool.importlinter.contracts]]
name = "domain imports no frameworks and no infrastructure"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["fastapi", "sqlalchemy", "litellm", "app.infra", "app.api", "app.services"]

[[tool.importlinter.contracts]]
name = "sqlguard is self-contained"
type = "forbidden"
source_modules = ["app.sqlguard"]
forbidden_modules = ["fastapi", "sqlalchemy", "litellm", "app.infra", "app.api"]
