[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raymand"
version = "0.1.0"
description = "DataMind — conversational BI platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    # Target-database drivers. All ship wheels and need no system client:
    # oracledb runs in thin mode, so no Oracle Instant Client; pymssql
    # bundles FreeTDS, which keeps the ODBC stack out of the image.
    "aiomysql>=0.2",
    "oracledb>=2.4",
    "pymssql>=2.3",
    "sqlglot>=25.0",
    "litellm>=1.52",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "cryptography>=43.0",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "email-validator>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "import-linter>=2.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "fixtures*"]

[tool.ruff]
line-length = 96
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "ASYNC", "S"]
ignore = ["S101", "B008", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "E501"]
# Alembic revisions are generated; their column definitions run long.
"app/infra/db/migrations/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── The dependency rule, enforced rather than documented ─────────────────
[tool.importlinter]
root_package = "app"
# Required by import-linter when a forbidden contract names external packages
# (fastapi, sqlalchemy, litellm) so they appear in the import graph.
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture: api -> services -> domain <- infra"
type = "layers"
layers = ["app.api", "app.services", "app.pipeline", "app.domain"]
# Services may reach into infra (adapters). infra is not a layer here, so this
# is unconstrained anyway; keep the note but do not error if it matches nothing.
ignore_imports = ["app.services.* -> app.infra.*"]
unmatched_ignore_imports_alerting = "none"

[[tool.importlinter.contracts]]
name = "domain imports no frameworks and no infrastructure"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["fastapi", "sqlalchemy", "litellm", "app.infra", "app.api", "app.services"]

[[tool.importlinter.contracts]]
name = "sqlguard is self-contained"
type = "forbidden"
source_modules = ["app.sqlguard"]
forbidden_modules = ["fastapi", "sqlalchemy", "litellm", "app.infra", "app.api"]
